get employees by company fixed